// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dockerfile rendering > daytona 1`] = `
"# Use Ubuntu as the base image
# Note: Use \`FROM e2bdev/code-interpreter:latest\` instead if you want to use the code interpreting features (https://github.com/e2b-dev/code-interpreter)
# and not just plain E2B sandbox.
FROM ubuntu:24.04

# Avoid prompts from apt
ENV DEBIAN_FRONTEND=noninteractive

# Set environment variables that don't change filesystem
ENV BUN_INSTALL="/root/.bun" \\
    PATH="/root/.bun/bin:/usr/local/bin:$PATH"

# Combine all apt operations, repository setup, and tool installations into one layer
RUN apt-get update && apt-get install -y \\
    apt-transport-https \\
    ca-certificates \\
    curl \\
    gnupg \\
    lsb-release \\
    gcc \\
    python3 \\
    python3-pip \\
    unzip \\
    software-properties-common \\
    jq \\
    ripgrep \\
    supervisor \\
    postgresql \\
    redis-server \\
    bubblewrap \\
    && rm -rf /var/lib/apt/lists/*

# Configure PostgreSQL for passwordless local dev access
RUN printf 'local all all trust\\nhost all all 127.0.0.1/32 trust\\nhost all all ::1/128 trust\\n' > /etc/postgresql/16/main/pg_hba.conf \\
    && sed -i "s/#listen_addresses = 'localhost'/listen_addresses = 'localhost'/" /etc/postgresql/16/main/postgresql.conf

# Install Node.js 22
RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \\
    && apt-get install -y nodejs \\
    && apt-get clean \\
    && rm -rf /var/lib/apt/lists/*

# Install GitHub CLI
RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \\
    && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \\
    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \\
    && apt-get update \\
    && apt-get install -y --no-install-recommends gh \\
    && apt-get clean \\
    && rm -rf /var/lib/apt/lists/*

# Install bun
RUN curl -fsSL https://bun.sh/install | bash \\
    && ln -s /root/.bun/bin/bun /usr/local/bin/bun

# Install pnpm, sandbox-agent, claude code, and codex
# Clean npm cache and strip dev-only files in the SAME RUN to keep the layer small.
RUN npm install -g pnpm \\
    @anthropic-ai/claude-code@2.1.126 \\
    @openai/codex@0.128.0 \\
    @sandbox-agent/cli@0.2.1 \\
    && npm cache clean --force \\
    && find /usr/lib/node_modules -type d \\( -name 'docs' -o -name 'test' -o -name 'tests' -o -name '__tests__' -o -name 'examples' -o -name '.github' \\) -exec rm -rf {} + 2>/dev/null || true \\
    && find /usr/lib/node_modules -name '*.map' -delete 2>/dev/null || true \\
    && find /usr/lib/node_modules -name '*.d.ts' -delete 2>/dev/null || true \\
    && rm -rf /usr/share/doc/* /usr/share/man/* /usr/share/locale/* 2>/dev/null || true


# Patch claude code
RUN sed -i.bak -e '1a\\
Object.defineProperty(process, "getuid", {\\
  value: function() { return 1000; },\\
  writable: false,\\
  enumerable: true,\\
  configurable: true\\
});' -e 's/![a-zA-Z_$][a-zA-Z0-9_$]*()[.]bypassPermissionsModeAccepted/false/g' "$(readlink -f "$(which claude)")" \\
    && rm -f "$(readlink -f "$(which claude)")".bak

# Start Supervisor in the foreground (PID 1)
COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
RUN mkdir -p /var/run /var/log/supervisor

# Create entrypoint wrapper to disable core dumps before starting supervisord
RUN cat > /entrypoint.sh << 'EOF'
#!/bin/bash
set -e
# Disable core dumps to prevent disk pollution in /tmp overlay
ulimit -c 0
exec /usr/bin/supervisord -n -c /etc/supervisor/conf.d/supervisord.conf
EOF
RUN chmod +x /entrypoint.sh

ENTRYPOINT ["/entrypoint.sh"]
"
`;

exports[`Dockerfile rendering > e2b 1`] = `
"# Use Ubuntu as the base image
# Note: Use \`FROM e2bdev/code-interpreter:latest\` instead if you want to use the code interpreting features (https://github.com/e2b-dev/code-interpreter)
# and not just plain E2B sandbox.
FROM ubuntu:24.04

# Avoid prompts from apt
ENV DEBIAN_FRONTEND=noninteractive

# Set environment variables that don't change filesystem
ENV BUN_INSTALL="/root/.bun" \\
    PATH="/root/.bun/bin:/usr/local/bin:$PATH"

# Combine all apt operations, repository setup, and tool installations into one layer
RUN apt-get update && apt-get install -y \\
    apt-transport-https \\
    ca-certificates \\
    curl \\
    gnupg \\
    lsb-release \\
    gcc \\
    python3 \\
    python3-pip \\
    unzip \\
    software-properties-common \\
    jq \\
    ripgrep \\
    supervisor \\
    postgresql \\
    redis-server \\
    bubblewrap \\
    && rm -rf /var/lib/apt/lists/*

# Configure PostgreSQL for passwordless local dev access
RUN printf 'local all all trust\\nhost all all 127.0.0.1/32 trust\\nhost all all ::1/128 trust\\n' > /etc/postgresql/16/main/pg_hba.conf \\
    && sed -i "s/#listen_addresses = 'localhost'/listen_addresses = 'localhost'/" /etc/postgresql/16/main/postgresql.conf

# Install Node.js 22
RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \\
    && apt-get install -y nodejs \\
    && apt-get clean \\
    && rm -rf /var/lib/apt/lists/*

# Install GitHub CLI
RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \\
    && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \\
    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \\
    && apt-get update \\
    && apt-get install -y --no-install-recommends gh \\
    && apt-get clean \\
    && rm -rf /var/lib/apt/lists/*

# Install bun
RUN curl -fsSL https://bun.sh/install | bash \\
    && ln -s /root/.bun/bin/bun /usr/local/bin/bun

# Install pnpm, sandbox-agent, claude code, and codex
# Clean npm cache and strip dev-only files in the SAME RUN to keep the layer small.
RUN npm install -g pnpm \\
    @anthropic-ai/claude-code@2.1.126 \\
    @openai/codex@0.128.0 \\
    @sandbox-agent/cli@0.2.1 \\
    && npm cache clean --force \\
    && find /usr/lib/node_modules -type d \\( -name 'docs' -o -name 'test' -o -name 'tests' -o -name '__tests__' -o -name 'examples' -o -name '.github' \\) -exec rm -rf {} + 2>/dev/null || true \\
    && find /usr/lib/node_modules -name '*.map' -delete 2>/dev/null || true \\
    && find /usr/lib/node_modules -name '*.d.ts' -delete 2>/dev/null || true \\
    && rm -rf /usr/share/doc/* /usr/share/man/* /usr/share/locale/* 2>/dev/null || true


# Patch claude code
RUN sed -i.bak -e '1a\\
Object.defineProperty(process, "getuid", {\\
  value: function() { return 1000; },\\
  writable: false,\\
  enumerable: true,\\
  configurable: true\\
});' -e 's/![a-zA-Z_$][a-zA-Z0-9_$]*()[.]bypassPermissionsModeAccepted/false/g' "$(readlink -f "$(which claude)")" \\
    && rm -f "$(readlink -f "$(which claude)")".bak

"
`;
